--- a/index.html
+++ b/index.html
@@ -1,90 +1,95 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Bootstrap/css/bootstrap.min.css">
-    <script type="text/javascript" src="./Bootstrap/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" href="./CSS/style-index.css">
-    <title>Salas</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./CSS/style-index.css" />
+  <link rel="stylesheet" type="text/css" href="./CSS/modals.css" />
+  <title>Planning Poker</title>
 </head>
 
 <body>
-    <div class="container">
+  <header>
+    <div class="poker">
+      <img src="./Imagens/concert.png" alt="Concert Technologies">
+    </div>
+    <div class="Navbar">
+      <ul>
+        <li>Convidar jogadores</li>
+        <li>História da votação</li>
+      </ul>
+    </div>
+  </header>
 
-        <div class="form">
+  <div class="loader"></div>
 
-            <div class="input-group">
-                <div class="input-header">
-                    <div class="title">
-                        <h2>Criar uma sala</h2>
-                    </div>
 
-                    <div class="input-box">
-                        <input id="name" type="text" name="name" required>
-                        <label for="name">Seu nome</label>
-                    </div>
-
-                    <div class="input-box">
-                        <input id="name" type="text" name="name" required>
-                        <label for="name">Nome da Sala</label>
-                    </div>
-                    <div class="button-group">
-                        <div class="criar-button">
-                            <a href="inicial.html" role="button" aria-pressed="true">
-                                <button>Criar</></button></a>
-
-                            <a href="Espectador.html" role="button" aria-pressed="true">
-                                <button>Espectar</button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="input-group">
-                <div class="input-header">
-                    <div class="title">
-                        <h2>Entrar em uma sala</h2>
-                    </div>
-
-                    <div class="input-box">
-                        <input id="name" type="text" name="name" required>
-                        <label for="name">Seu nome</label>
-                    </div>
-
-                    <div class="input-box">
-                        <input id="name" type="text" name="name" required>
-                        <label for="name">Nome da Sala</label>
-                    </div>
-
-                    <div class="button-group">
-                        <div class="criar-button">
-                            <a href="inicial.html" role="button" aria-pressed="true">
-                                <button>Entrar</></button></a>
-
-                            <a href="Espectador.html" role="button" aria-pressed="true">
-                                <button>Espectar</button></a>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-
-            </form>
+  <div class="container">
+    <div class="row">
+      <div class="player">
+        <p>Player 1</p>
+        <div class="card">
+          <span>?</span>
         </div>
-
-
-
+      </div>
+      <div class="player">
+        <p>Player 2</p>
+        <div class="card">
+          <span>?</span>
+        </div>
+      </div>
+      <div class="player">
+        <p>Player 3</p>
+        <div class="card">
+          <span>?</span>
+        </div>
+      </div>
+      <div class="player">
+        <p>Player 4</p>
+        <div class="card">
+          <span>?</span>
+        </div>
+      </div>
     </div>
 
+    <div class="button-container">
+      <div class="rectangle">
+        <button class="button newVote">Nova Votação</button>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="player">
+        <p>Player 5</p>
+        <div class="card">
+          <span>?</span>
+        </div>
+      </div>
+      <div class="player">
+        <p>Player 6</p>
+        <div class="card">
+          <span>?</span>
+        </div>
+      </div>
+      <div class="player">
+        <p>Player 7</p>
+        <div class="card">
+          <span>?</span>
+        </div>
+      </div>
+      <div class="player">
+        <p>Player 8</p>
+        <div class="card">
+          <span>?</span>
+        </div>
+      </div>
+    </div>
+  </div>
 
-
-
-
+  <script src="/js/classes.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
