removendo arquivos inuteis

--- a/modal-votacao.html
+++ b/modal-votacao.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Planning Poker</title>
-  <link rel="stylesheet" type="text/css" href="./CSS/modal-votacao.css" />
+  <link rel="stylesheet" type="text/css" href="./CSS/modals.css" />
   <!DOCTYPE html>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
